--- a/Happid/Info.plist
+++ b/Happid/Info.plist
@@ -17,12 +17,18 @@
 					<string>$(PRODUCT_MODULE_NAME).SceneDelegate</string>
 					<key>UISceneStoryboardFile</key>
 					<string>Main</string>
-                    <key>UIAppFonts</key>
-                    <array>
-                        <string>Montserrat-Regular.ttf</string>
-                        <string>Montserrat-Bold.ttf</string>
-                     </array>
-                   </dict>
+					<key>UIStatusBarHidden</key>
+					<true/>
+					<key>Status bar is initially hidden</key>
+					<true/>
+					<key>UIViewControllerBasedStatusBarAppearance</key>
+					<true/>
+					<key>UIAppFonts</key>
+					<array>
+						<string>Montserrat-Regular.ttf</string>
+						<string>Montserrat-Bold.ttf</string>
+					</array>
+				</dict>
 			</array>
 		</dict>
 	</dict>
